feat: Initial introduction of dependency injection using dagger